# stackulator

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
docs/: 404.html  index.html
docs/assets/: stackulator-854df72e0ef047d0.js  stackulator-854df72e0ef047d0.js.br  stackulator-96c1951bda623088.js  stackulator-96c1951bda623088.js.br  stackulator-a0e27fb14538c092.js  stackulator-a0e27fb14538c092.js.br  stackulator-e304601c6d03b4f2.js  stackulator-e304601c6d03b4f2.js.br  stackulator_bg-0f11e0f3071901aa.wasm  stackulator_bg-0f11e0f3071901aa.wasm.br  stackulator_bg-449b08a4ebd2732f.wasm  stackulator_bg-449b08a4ebd2732f.wasm.br  stackulator_bg-478cbcd0f3f9ac39.wasm  stackulator_bg-478cbcd0f3f9ac39.wasm.br  stackulator_bg-6b8f686f30adcc03.wasm  stackulator_bg-6b8f686f30adcc03.wasm.br  stackulator_bg-8a704b5b5f496603.wasm  stackulator_bg-8a704b5b5f496603.wasm.br  stackulator_bg-8b7aef3afe0d8b58.wasm  stackulator_bg-8b7aef3afe0d8b58.wasm.br  stackulator_bg-9363bbdcb3256147.wasm  stackulator_bg-9363bbdcb3256147.wasm.br  stackulator_bg-ad58ed8b90e9d788.wasm  stackulator_bg-ad58ed8b90e9d788.wasm.br
src/: grammar.pest  main.rs
src/language/: env.rs  eval.rs  mod.rs  parse.rs  repr.rs  vm.rs
src/language/ast/: iftrue.rs  list.rs  map.rs  match_block.rs  mod.rs  primitives.rs  set.rs  stack.rs  take.rs  types.rs  while_block.rs
